force-app/main/default/objects/Opportunity/fields/Current_System__c.field-meta.xml
<CustomField>
    <fullName>Current_System__c</fullName>
    <label>Current System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Aldelo</fullName>
            </value>
            <value>
                <fullName>Aloha</fullName>
            </value>
            <value>
                <fullName>Brink POS/PAR</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Clover</fullName>
            </value>
            <value>
                <fullName>Digital Dining</fullName>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>Emagine POS/Spot On</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Future POS</fullName>
            </value>
            <value>
                <fullName>Harbortouch</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>Lavu</fullName>
            </value>
            <value>
                <fullName>Maitre de</fullName>
            </value>
            <value>
                <fullName>Micros</fullName>
            </value>
            <value>
                <fullName>MobileBytes</fullName>
            </value>
            <value>
                <fullName>One POS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POSitouch</fullName>
            </value>
            <value>
                <fullName>RBS Worldpay</fullName>
            </value>
            <value>
                <fullName>Restaurant Manager</fullName>
            </value>
            <value>
                <fullName>Revel POS</fullName>
            </value>
            <value>
                <fullName>Revention/Hunger Rush</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Spark</fullName>
            </value>
            <value>
                <fullName>SpotOn</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>