force-app/main/default/objects/Opportunity/fields/Customer_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Area__c</fullName>
    <inlineHelpText>Enter the WCS Customer Service Area that will be applicable for the delivery of the products on this opportunity</inlineHelpText>
    <label>Customer Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>US Atlanta</fullName>
            </value>
            <value>
                <fullName>US California</fullName>
            </value>
            <value>
                <fullName>US Charlotte</fullName>
            </value>
            <value>
                <fullName>US Great Lakes</fullName>
            </value>
            <value>
                <fullName>US Midatlantic</fullName>
            </value>
            <value>
                <fullName>US New York</fullName>
            </value>
            <value>
                <fullName>US Northeast</fullName>
            </value>
            <value>
                <fullName>US Northwest</fullName>
            </value>
            <value>
                <fullName>US Other</fullName>
            </value>
            <value>
                <fullName>US South Central</fullName>
            </value>
            <value>
                <fullName>US Southeast</fullName>
            </value>
            <value>
                <fullName>US SVC</fullName>
            </value>
            <value>
                <fullName>WCS - Area Grouping - No Country</fullName>
            </value>
            <value>
                <fullName>WCS - Canada</fullName>
            </value>
            <value>
                <fullName>WCS - Caribbean Latin America</fullName>
            </value>
            <value>
                <fullName>WCS - Central Europe</fullName>
            </value>
            <value>
                <fullName>WCS - France - Belgium</fullName>
            </value>
            <value>
                <fullName>WCS - Greater China</fullName>
            </value>
            <value>
                <fullName>WCS - Iberia</fullName>
            </value>
            <value>
                <fullName>WCS - India</fullName>
            </value>
            <value>
                <fullName>WCS - Israel</fullName>
            </value>
            <value>
                <fullName>WCS - Italy - Turkey</fullName>
            </value>
            <value>
                <fullName>WCS - Japan</fullName>
            </value>
            <value>
                <fullName>WCS - Korea</fullName>
            </value>
            <value>
                <fullName>WCS - Middle East - Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>