force-app/main/default/objects/Opportunity/fields/CVV_Fee__c.field-meta.xml
<CustomField>
    <fullName>CVV_Fee__c</fullName>
    <label>CVV2 Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>