force-app/main/default/objects/Opportunity/fields/Date_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Commission_Paid__c</fullName>
    <description>CATM</description>
    <label>Date Commission Paid</label>
    <type>Date</type>
</CustomField>