force-app/main/default/objects/Opportunity/fields/Date_Contract_Received_by_Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Received_by_Sales_Admin__c</fullName>
    <description>CATM</description>
    <label>Date Contract Received by Sales Admin</label>
    <type>Date</type>
</CustomField>