force-app/main/default/objects/Opportunity/fields/Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Month__c</fullName>
    <formula>DAY( CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>