force-app/main/default/objects/Opportunity/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <description>CATM</description>
    <label>Deal Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>