force-app/main/default/objects/Opportunity/fields/Discontinued_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Discontinued_Reasons__c</fullName>
    <label>Discontinued Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Management Issues/Changes</fullName>
            </value>
            <value>
                <fullName>Mergers/Acquisitions/Divestitures</fullName>
            </value>
            <value>
                <fullName>NCR Administrative</fullName>
            </value>
            <value>
                <fullName>No Customer Funding</fullName>
            </value>
            <value>
                <fullName>Project Canceled by Customer</fullName>
            </value>
            <value>
                <fullName>Qualified Out by NCR</fullName>
            </value>
            <value>
                <fullName>Services Renewal Not Applicable</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Non-Responsive (Lost Interest)</fullName>
            </value>
            <value>
                <fullName>Project Postponed (Timing)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>