force-app/main/default/objects/Opportunity/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBD</label>
    <type>Date</type>
</CustomField>