force-app/main/default/objects/Opportunity/fields/Enablement__c.field-meta.xml
<CustomField>
    <fullName>Enablement__c</fullName>
    <description>This field is to let Deal classification know what the end-customer, partner and NCR relationship is for this opportunity</description>
    <label>Enablement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Choices</fullName>
            </value>
            <value>
                <fullName>High - Partner contributes more then 6% GM or owns contract or fulfills customer requirement</fullName>
            </value>
            <value>
                <fullName>Low - Partner contributes less then 6% GM</fullName>
            </value>
            <value>
                <fullName>Distribution – Stock Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>