force-app/main/default/objects/Opportunity/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to for the actual end customer, this should not be a distributor or partner listing</description>
    <inlineHelpText>End customer is an existing NCR customer, select correct Master customer number.</inlineHelpText>
    <label>End Customer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Customer</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Soup Integration</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Indirect Opportunities</relationshipLabel>
    <relationshipName>CustomerAcc_Opporutnity</relationshipName>
    <type>Lookup</type>
</CustomField>