force-app/main/default/objects/Opportunity/fields/End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name__c</fullName>
    <formula>End_Customer__r.Name</formula>
    <label>End Customer Name</label>
    <type>Text</type>
</CustomField>