force-app/main/default/objects/Opportunity/fields/EndCustomerPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>EndCustomerPrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for primary contact at the end customer, not the contact at partner or distributor for this opportunity</description>
    <label>End Customer Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.SuspendProcessing_Contact__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (End Customer Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>