force-app/main/default/objects/Opportunity/fields/EndCustomerUnknown__c.field-meta.xml
<CustomField>
    <fullName>EndCustomerUnknown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, End_Customer__c will not be mandatory. I unchecked, End_Customer__c is mandatory.</description>
    <inlineHelpText>Please select, if the End Customer is not known Or Please update End Customer below</inlineHelpText>
    <label>End Customer Unknown</label>
    <type>Checkbox</type>
</CustomField>