force-app/main/default/objects/Opportunity/fields/Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Needed__c</fullName>
    <description>CATM</description>
    <label>Equipment Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>