force-app/main/default/objects/Opportunity/fields/Essentials_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Essentials_Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essentials Contract Signed</label>
    <type>Checkbox</type>
</CustomField>