force-app/main/default/objects/Opportunity/fields/Expected_Book_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Book_Year__c</fullName>
    <formula>YEAR(CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Book Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>