force-app/main/default/objects/Opportunity/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <label>Expected Delivery Start Date</label>
    <type>Date</type>
</CustomField>