force-app/main/default/objects/Opportunity/fields/Expected_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Service_Start_Date__c</fullName>
    <inlineHelpText>Enter the date the Services will begin, post warranty.</inlineHelpText>
    <label>Expected Service Start Date</label>
    <type>Date</type>
</CustomField>