force-app/main/default/objects/Opportunity/fields/FOC_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOC_Amount__c</fullName>
    <inlineHelpText>$ Amount of investment (PS hours, discounts and/or refunds)</inlineHelpText>
    <label>FOC Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>