force-app/main/default/objects/Opportunity/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <description>This custom field is used to fill forecast category field in salesforce1 as standard forecast category field is not editable in salesforce1.</description>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Exclude Pipeline</fullName>
            </value>
            <value>
                <fullName>Exclude Upside</fullName>
            </value>
            <value>
                <fullName>Exclude Commit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>