force-app/main/default/objects/Opportunity/fields/Forecast_Category_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category_Exclude__c</fullName>
    <formula>IF(CONTAINS(RecordType.DeveloperName, &apos;Exclude&apos;) &amp;&amp; (TEXT(Forecast_Category__c)==&apos;Pipeline&apos; ||TEXT(Forecast_Category__c)==&apos;Upside&apos;||TEXT(Forecast_Category__c)==&apos;Commit&apos;), &apos;Exclude - &apos;+ TEXT(Forecast_Category__c) , TEXT(Forecast_Category__c))</formula>
    <label>Forecast Category Exclude</label>
    <type>Text</type>
</CustomField>