force-app/main/default/objects/Opportunity/fields/Fulfilled_by_Partner__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_by_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will this order be filled by an Indirect Channel or Distribution partner (Non NCR supplier)?</inlineHelpText>
    <label>Fulfilled by Partner?</label>
    <type>Checkbox</type>
</CustomField>