force-app/main/default/objects/Opportunity/fields/GAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>GAM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of Global Opportunity owner</inlineHelpText>
    <label>GAM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>