force-app/main/default/objects/Opportunity/fields/Hardware_Products__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Products__c</fullName>
    <inlineHelpText>Total of all HW products</inlineHelpText>
    <label>HW</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>HW</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>