force-app/main/default/objects/Opportunity/fields/Hardware_Products_QUBY__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Products_QUBY__c</fullName>
    <label>Hardware Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>