force-app/main/default/objects/Opportunity/fields/Has_Approved_Quote__c.field-meta.xml
<CustomField>
    <fullName>Has_Approved_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Approved Quote?</label>
    <type>Checkbox</type>
</CustomField>