force-app/main/default/objects/Opportunity/fields/Has_Value_Prompter_Completed__c.field-meta.xml
<CustomField>
    <fullName>Has_Value_Prompter_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Value Prompter Completed?</label>
    <type>Checkbox</type>
</CustomField>