force-app/main/default/objects/Opportunity/fields/How_important_was_Price_in_the_Decision__c.field-meta.xml
<CustomField>
    <fullName>How_important_was_Price_in_the_Decision__c</fullName>
    <label>How important was Price in the Decision?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Loss_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Slightly</fullName>
            </value>
            <value>
                <fullName>Moderately</fullName>
            </value>
            <value>
                <fullName>Significantly</fullName>
            </value>
            <value>
                <fullName>Primary Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>