force-app/main/default/objects/Opportunity/fields/HW_GP__c.field-meta.xml
<CustomField>
    <fullName>HW_GP__c</fullName>
    <inlineHelpText>Enter the Expected HW Gross Profit percentage that will apply to the sum of all hardware products contained within this opportunity. Percentage use should be based on fully burderned cost.</inlineHelpText>
    <label>HW GP %</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>