force-app/main/default/objects/Opportunity/fields/HWM__c.field-meta.xml
<CustomField>
    <fullName>HWM__c</fullName>
    <description>Total of all HWM</description>
    <label>HWM</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>HWM</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>