force-app/main/default/objects/Opportunity/fields/In_Year_Revenue_OLI__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Revenue_OLI__c</fullName>
    <description>CATM</description>
    <formula>Reoccurring_Revenue_OLI__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Year Revenue (OLI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>