force-app/main/default/objects/Opportunity/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <description>Who has sold any HW, PS, SW or B/Fix to this end customer in past 12 months</description>
    <inlineHelpText>Who has sold any HW, PS, SW or B/Fix to this end customer in past 12 months</inlineHelpText>
    <label>Incumbent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Both NCR and reseller</fullName>
            </value>
            <value>
                <fullName>Neither NCR, nor reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>