force-app/main/default/objects/Opportunity/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <formula>IMAGE(&quot;resource/1453027917000/message&quot;, &quot;Message&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Information</label>
    <type>Text</type>
</CustomField>