force-app/main/default/objects/Opportunity/fields/IR_Category__c.field-meta.xml
<CustomField>
    <fullName>IR_Category__c</fullName>
    <description>CATM - Investor Relations Category for product reporting</description>
    <inlineHelpText>Investor Relations Category</inlineHelpText>
    <label>IR Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allpoint+</fullName>
            </value>
            <value>
                <fullName>External Processing Customer Wins</fullName>
            </value>
            <value>
                <fullName>FI Managed Services</fullName>
            </value>
            <value>
                <fullName>Fintech Allpoint</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Preferred Branding</fullName>
            </value>
            <value>
                <fullName>Principal Branding</fullName>
            </value>
            <value>
                <fullName>Retail Wins</fullName>
            </value>
            <value>
                <fullName>Traditional FI Allpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>