force-app/main/default/objects/Opportunity/fields/IRR__c.field-meta.xml
<CustomField>
    <fullName>IRR__c</fullName>
    <description>CATM</description>
    <label>IRR%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>