force-app/main/default/objects/Opportunity/fields/is_Automation_Update__c.field-meta.xml
<CustomField>
    <fullName>is_Automation_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Automation Update</label>
    <type>Checkbox</type>
</CustomField>