force-app/main/default/objects/Opportunity/fields/Is_Silver_Aloha_Payments_Attached__c.field-meta.xml
<CustomField>
    <fullName>Is_Silver_Aloha_Payments_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for HOSP SMB</description>
    <label>Is Silver/Aloha Payments Attached?</label>
    <type>Checkbox</type>
</CustomField>