force-app/main/default/objects/Opportunity/fields/IsClone__c.field-meta.xml
<CustomField>
    <fullName>IsClone__c</fullName>
    <label>IsClone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>