force-app/main/default/objects/Opportunity/fields/isCloneWithProduct__c.field-meta.xml
<CustomField>
    <fullName>isCloneWithProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCloneWithProduct</label>
    <type>Checkbox</type>
</CustomField>