force-app/main/default/objects/Opportunity/fields/IsOppLineItemTypeUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsOppLineItemTypeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is OppLineItemType Update</label>
    <type>Checkbox</type>
</CustomField>