force-app/main/default/objects/Opportunity/fields/IsQuoteCreatedInOtherSystem__c.field-meta.xml
<CustomField>
    <fullName>IsQuoteCreatedInOtherSystem__c</fullName>
    <description>This field tracks if Quotes are created in Other system when there are no QuBy Quotes and allows close/booked the opportunity of answer is yes, else doesn&apos;t allows closing.</description>
    <label>Is Quote Created In Other System</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>