force-app/main/default/objects/Opportunity/fields/Key_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Key_Criteria__c</fullName>
    <label>Key Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Business Benefits</fullName>
            </value>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Pre-Contact Termination</fullName>
            </value>
            <value>
                <fullName>Post-Contact Termination</fullName>
            </value>
            <value>
                <fullName>HW</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
                <label>Service</label>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>