force-app/main/default/objects/Opportunity/fields/Key_Criteria_Comments__c.field-meta.xml
<CustomField>
    <fullName>Key_Criteria_Comments__c</fullName>
    <inlineHelpText>Enter any comments specific to your win/loss scenario</inlineHelpText>
    <label>Key Criteria Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>