force-app/main/default/objects/Opportunity/fields/Key_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Key_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM</description>
    <label>Key/Strategic Opportunity?</label>
    <type>Checkbox</type>
</CustomField>