force-app/main/default/objects/Opportunity/fields/Lead_Information__c.field-meta.xml
<CustomField>
    <fullName>Lead_Information__c</fullName>
    <description>CATM</description>
    <label>Lead Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>